# will_i_be_depressed

./: README.md  main.py  parser.py  pyproject.toml
api/: location.py  weather.py  zipcode_to_latlong.py
